--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
     "mongoose": "^6.6.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
@@ -22,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "devStart": "nodemon server.js",
+    "devSQLStart": "nodemon serverMysql.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
